--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             overflow: hidden;
         }
         .c1 {
-            background-image: linear-gradient(1deg, #f35d44, #f35c44 30%, #dd0f3a);
-            color: #fff;
+            background-color: white;
+            color: #666;
         }
         .c2 {
             background-color: white;
