--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     $(document).ready(function() {  
         $("#linkQrCode").qrcode({  
             render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
-            text : "https://fendnegqu.github.io/app.github.io/fdq1_0.apk",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
+            text : "https://www.18tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
             width : "120",          //二维码的宽度  
             height : "120",         //二维码的高度 
 	    correctLevel: 3,//二维码纠错级别 
@@ -27,7 +27,7 @@
 			<div class="content">
 				<div>
 					<h3>11TV-成人视频社区</h2>
-					<h4>本网站是一个提供成人视频内容的网站，提供内容最全最新的在线视频</h3>
+					<h4>本网站提供最全最新的成人在线视频</h3>
 					<h3>永久发布地址：11tv.fun</h2>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h3>
