--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     $(document).ready(function() {  
         $("#linkQrCode").qrcode({  
             render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
-            text : "https://www.18tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
+            text : "https://18tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
             width : "120",          //二维码的宽度  
             height : "120",         //二维码的高度 
 	    correctLevel: 3,//二维码纠错级别 
@@ -33,8 +33,8 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h3>
 				</div>
 				<div class="golink">
-					<a href="18tv.fun">线路一</a>
-					<a href="18tv.fun">线路二</a>
+					<a href="https://www.18tv.fun">线路一</a>
+					<a href="https://www.18tv.fun">线路二</a>
 				</div>
 				<p><a href="">点击或扫码下载APP</a></p>
 				<div class="download">
