--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="Cache-Control " content="no-cache,must-revalidate">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-		<title>11TV-成人社区</title>
-		<meta name="description" content="粉成人视频社区，一枚小粉灯，点亮你黑夜的激情" />
+		<title>11TV-成人在线视频</title>
+		<meta name="description" content="成人视频社区，一枚小粉灯，点亮你黑夜的激情" />
 		<meta name="keywords" content="成人社区,小粉灯,红灯区,楼凤,技师,洗浴中心,小妹,莞式服务,站街,酒店小卡片,学生妹,少妇,御姐,萝莉,刺激视频" />
 		<link rel="stylesheet" href="./css/comm.css">
 		<script type='text/javascript' src='./javascript/jquery.min.js'></script>
@@ -15,7 +15,7 @@
     $(document).ready(function() {  
         $("#linkQrCode").qrcode({  
             render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
-            text : "https://18tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
+            text : "https://www.18tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
             width : "120",          //二维码的宽度  
             height : "120",         //二维码的高度 
 	    correctLevel: 3,//二维码纠错级别 
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h3>11TV-成人视频社区</h2>
+					<h3>11TV-成人视频</h2>
 					<h4>本网站提供最全最新的成人在线视频</h3>
 					<h3>永久发布地址：11tv.fun</h2>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
