--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	    correctLevel: 3,//二维码纠错级别 
         });  
     });  
-	</script>  
+	</script>
+	<script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278631683&web_id=1278631683"></script>
 	<body>
 		<div class="container">
 			<div class="content">
