--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 		<link rel="stylesheet" href="./css/comm.css">
 		<script type='text/javascript' src='./javascript/jquery.min.js'></script>
 		<script type="text/javascript" src="./javascript/jquery.qrcode.min.js"></script>
-		<script>
-			var _hmt = _hmt || [];
-			(function() {
-  				var hm = document.createElement("script");
-  				hm.src = "https://hm.baidu.com/hm.js?b285819855fe1070d3bd961c320d2146";
-  				var s = document.getElementsByTagName("script")[0]; 
-  				s.parentNode.insertBefore(hm, s);
-				
-			})();
-		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159300011-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159300011-1');
+</script>
 	</head>
 	<script type="text/javascript">  
     $(document).ready(function() {  
