--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     $(document).ready(function() {  
         $("#linkQrCode").qrcode({  
             render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
-            text : "https://www.18tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
+            text : "https://www.11tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
             width : "120",          //二维码的宽度  
             height : "120",         //二维码的高度 
 	    correctLevel: 3,//二维码纠错级别 
@@ -35,9 +35,9 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h3>11TV.FUN</h2>
-					<h4>本网站提供最全最新的成人在线视频</h3>
-					<h3>永久发布地址：11tv.fun</h2>
+					<h3>永久发布地址：11TV.FUN</h2>
+					<h4>全网最大的免费成人在线视频，每日更新，应用尽有</h3>
+					<h3>车友们务必记得收藏本页：11tv.fun</h2>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h3>
 				</div>
