--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 			<div class="content">
 				<div>
 					<h2>永久发布地址：11TV.FUN</h2>
-					<h4>全网最大的免费成人在线视频，每日更新，应用尽有</h4>
-					<h3>车友们务必记得收藏本页：11tv.fun</h3>
+					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
-					<h4>警告！- 禁止18岁以下未成年人访问</h3>
+					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
 					<a href="https://www.18tv.fun">线路一</a>
