--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.18tv.fun">线路一</a>
-					<a href="https://www.liamnb.pw">线路二</a>
-					<a href="https://www.18tv.fun">线路三</a>
-					<a href="https://www.liamnb.pw">线路四</a>
+					<a href="https://www.18tv.fun">线路一（点击进入）</a>
+					<a href="https://www.liamnb.pw">线路二（点击进入）</a>
+					<a href="https://www.18tv.fun">线路三（点击进入）</a>
+					<a href="https://www.liamnb.pw">线路四（点击进入）</a>
 				</div>
 				<p><a href="">点击或扫码下载APP</a></p>
 				<div class="download">
