--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<a href="https://www.18tv.fun">线路三（点击进入）</a>
 					<a href="https://www.liamnb.pw">线路四（点击进入）</a>
 				</div>
+				<h4>点击或扫码下载APP</h4>
 				<p><a href="">点击或扫码下载APP</a></p>
 				<div class="download">
 					<div id="linkQrCode"></div>
