--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 		<meta name="description" content="成人在线视频成人网站，永久免费，每天更新，随心观看" />
 		<meta name="keywords" content="成人网站,日本av,楼凤,技师,洗浴中心,小妹,莞式服务,站街,学生妹,少妇,御姐,萝莉,无码,在线" />
 		<link rel="stylesheet" href="./css/comm.css">
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?5ab0477fef2764adc9a8265f77ea32a8";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 		<script type='text/javascript' src='./javascript/jquery.min.js'></script>
 		<script type="text/javascript" src="./javascript/jquery.qrcode.min.js"></script>
 	</head>
