--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 				</div>
 			</div>
 		</div>
+	<script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278666207&web_id=1278666207"></script>
 	</body>
 	
 </html>
