--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<script type="text/javascript">  
     $(document).ready(function() {  
         $("#linkQrCode").qrcode({  
-            render : "table",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
+            render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
             text : "https://www.11tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
-            width : "140",          //二维码的宽度  
-            height : "140",         //二维码的高度 
+            width : "132",          //二维码的宽度  
+            height : "132",         //二维码的高度 
 	    correctLevel: 3,//二维码纠错级别 
         });  
     });  
@@ -34,15 +34,16 @@
 				<div class="golink">
 					<a href="https://www.18tv.fun">线路一（点击进入）</a>
 					<a href="https://www.av111.top">线路二（点击进入）</a>
-					<a href="https://www.liamnb.pw">线路三（点击进入）</a>
+					<a href="https://www.liamnb.pw">线路三（点击进入）</a>	
+				<div>
+					<h4 style="margin-top:10px">广告合作：a18tvfun@outlook.com</h4>
+				</div>	
 				</div>
 				<h4>点击扫码保存网址下载APP</h4>
 				<div class="download">
 					<div id="linkQrCode"></div>
 				</div>
-				<div>
-					<h4 style="margin-top:10px">广告合作：a18tvfun@outlook.com</h4>
-				</div>
+				
 			</div>
 		</div>
 	<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278666213&web_id=1278666213"></script>
