--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         $("#linkQrCode").qrcode({  
             render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
             text : "https://www.11tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
-            width : "132",          //二维码的宽度  
-            height : "132",         //二维码的高度 
+            width : "120",          //二维码的宽度  
+            height : "120",         //二维码的高度 
 	    correctLevel: 3,//二维码纠错级别 
         });  
     });  
@@ -34,7 +34,8 @@
 				<div class="golink">
 					<a href="https://www.18tv.fun">线路一（点击进入）</a>
 					<a href="https://www.av111.top">线路二（点击进入）</a>
-					<a href="https://www.liamnb.pw">线路三（点击进入）</a>	
+					<a href="https://www.liamnb.pw">线路三（点击进入）</a>
+					<a href="https://www.18tv.fun">线路四（点击进入）</a>
 				<div>
 					<h4 style="margin-top:10px">广告合作：a18tvfun@outlook.com</h4>
 				</div>	
