--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<h4>点击扫码保存网址下载APP</h4>
 				<div class="download">	
 				<div>
-					<h4 style="margin-top:10px">广告合作：a18tvfun@outlook.com</h4>
+					<h4 style="margin-top:10px">出量:a18tvfun@outlook.com</h4>
 				</div>	
 				
 					<div id="linkQrCode111111"></div>
