--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 					<a href="https://www.18tv.fun">线路四（点击进入）</a>	
 				</div>
 				<h2>记得收藏本页：www.11tv.fun</h2>
-				<h4>点击扫码保存网址下载APP</h4>
-				<h4>a18tvfun@outlook.com</h4>		
+				<h4>广告合作:a18tvfun@outlook.com</h4>		
 				<div id="linkQrCode111111"></div>			
 			</div>
 		</div>
