--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta http-equiv="Cache-Control " content="no-cache,must-revalidate">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-		<title>免费成人在线视频</title>
-		<meta name="description" content="成人在线视频成人网站，永久免费，每天更新，随心观看" />
-		<meta name="keywords" content="成人网站,日本av,楼凤,技师,洗浴中心,小妹,莞式服务,站街,学生妹,少妇,御姐,萝莉,无码,在线" />
+		<title>永久发布地址</title>
+		<meta name="description" content="全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。" />
+		<meta name="keywords" content="成人网站,在线视频,日韩av" />
 		<link rel="stylesheet" href="./css/comm.css">
 		<script type='text/javascript' src='./javascript/jquery.min.js'></script>
 		<script type="text/javascript" src="./javascript/jquery.qrcode.min.js"></script>
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h2>永久发布地址：11TV.FUN</h2>
+					<h2>永久发布地址：www.11tv.fun</h2>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
