--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.18tv.fun">线路一（点击进入）</a>
-					<a href="https://www.av111.top">线路二（点击进入）</a>
+					<a href="https://www.av111.top">线路一（点击进入）</a>
+					<a href="https://www.18tv.fun">线路二（点击进入）</a>
 					<a href="https://www.liamnb.pw">线路三（点击进入）</a>
-					<a href="https://www.18tv.fun">线路四（点击进入）</a>	
+					<a href="https://www.av111.top">线路四（点击进入）</a>	
 				</div>
 				<h2>记得收藏本页：www.11tv.fun</h2>
 				<h4>广告合作:a18tvfun@outlook.com</h4>		
