--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Cache-Control " content="no-cache,must-revalidate">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-		<title>永久发布地址</title>
+		<title>www.11tv.fun</title>
 		<meta name="description" content="全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。" />
 		<meta name="keywords" content="成人网站,在线视频,日韩av" />
 		<link rel="stylesheet" href="./css/comm.css">
@@ -32,13 +32,12 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.av111.top">线路一（点击进入）</a>
-					<a href="https://www.18tv.fun">线路二（点击进入）</a>
-					<a href="https://www.liamnb.pw">线路三（点击进入）</a>
-					<a href="https://www.av111.top">线路四（点击进入）</a>	
+					<a href="https://www.sanjihuang.com">线路一（www.sanjihuang.com）</a>
+					<a href="https://www.liamnb.pw">线路三（www.liamnb.pw）</a>
+					<a href="https://www.av111.top">线路四（www.av111.top）</a>	
 				</div>
 				<h2>记得收藏本页：www.11tv.fun</h2>
-				<h4>广告合作:a18tvfun@outlook.com</h4>		
+				<h4>Email:a18tvfun@outlook.com</h4>		
 				<div id="linkQrCode111111"></div>			
 			</div>
 		</div>
