--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.sanjihuang.com">线路一（www.sanjihuang.com）</a>
-					<a href="https://www.liamnb.pw">线路三（www.liamnb.pw）</a>
-					<a href="https://www.av111.top">线路四（www.av111.top）</a>	
+					<a href="https://www.sanjihuang.com">地址一：www.sanjihuang.com</a>
+					<a href="https://www.liamnb.pw">地址二：www.liamnb.pw</a>
+					<a href="https://www.av111.top">地址三：www.av111.top</a>	
 				</div>
 				<h2>记得收藏本页：www.11tv.fun</h2>
 				<h4>Email:a18tvfun@outlook.com</h4>		
