--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
 		<script type='text/javascript' src='./javascript/jquery.min.js'></script>
 		<script type="text/javascript" src="./javascript/jquery.qrcode.min.js"></script>
 	</head>
-	<script type="text/javascript">  
-    $(document).ready(function() {  
-        $("#linkQrCode").qrcode({  
-            render : "canvas",      //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好  
-            text : "https://www.11tv.fun",      //扫描二维码后显示的内容,可以直接填一个网址，扫描二维码后自动跳向该链接  
-            width : "120",          //二维码的宽度  
-            height : "120",         //二维码的高度 
-	    correctLevel: 3,//二维码纠错级别 
-        });  
-    });  
-	</script>
 	<body>
 		<div class="container">
 			<div class="content">
@@ -32,9 +21,9 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.sanjihuang.com">地址一：www.sanjihuang.com</a>
-					<a href="https://www.liamnb.pw">地址二：www.liamnb.pw</a>
-					<a href="https://www.av111.top">地址三：www.av111.top</a>	
+					<a href="https://www.sanjihuang.com">www.sanjihuang.com</a>
+					<a href="https://www.liamnb.pw">www.liamnb.pw</a>
+					<a href="https://www.av111.top">www.av111.top</a>	
 				</div>
 				<h2>记得收藏本页：www.11tv.fun</h2>
 				<h4>Email:a18tvfun@outlook.com</h4>		
