--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h2>永久发布地址：www.11tv.fun</h2>
+					<h2>永久发布地址：www.11tv.fun|www.18tv.fun</h2>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.sanjihuang.com">www.sanjihuang.com</a>
-					<a href="https://www.liamnb.pw">www.liamnb.pw</a>
-					<a href="https://www.av111.top">www.av111.top</a>	
+					<a href="https://www.sanjihuang.com"地址一（点击进入）</a>
+					<a href="https://www.liamnb.pw">地址二（点击进入）</a>
+					<a href="https://www.av111.top">地址三（点击进入）</a>	
 				</div>
-				<h2>记得收藏本页：www.11tv.fun</h2>
+				<h4>备用地址1：www.sanjihuang.com</h4>
+				<h4>备用地址1：www.liamnb.pw</h4>
+				<h4>备用地址1：www.av111.top</h4>
 				<h4>Email:a18tvfun@outlook.com</h4>		
 			</div>
 		</div>
