--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<h4>备用地址1：www.sanjihuang.com</h4>
 				<h4>备用地址2：www.liamnb.pw</h4>
 				<h4>备用地址3：www.av111.top</h4>
-				<h4><a href="https://www.sanjihuang.com">地址一（点击进入）</a></h4>
+				<a href="https://www.sanjihuang.com">地址一（点击进入）</a>
 			</div>
 		</div>
 	<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278666213&web_id=1278666213"></script>
