--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h2>永久发布地址1：www.11tv.fun</h2>
+					<h2><a href="https://www.11tv.fun">永久发布地址1：www.11tv.fun</a></h2>
 					<h2>永久发布地址2：www.18tv.fun</h2>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
@@ -26,10 +26,11 @@
 					<a href="https://www.liamnb.pw">地址二（点击进入）</a>
 					<a href="https://www.av111.top">地址三（点击进入）</a>	
 				</div>
+				<h4><a href="https://www.sanjihuang.com">备用地址1：www.sanjihuang.com</a></h4>
 				<h4>备用地址1：www.sanjihuang.com</h4>
 				<h4>备用地址2：www.liamnb.pw</h4>
 				<h4>备用地址3：www.av111.top</h4>
-				<a href="https://www.sanjihuang.com">地址一（点击进入）</a>
+				
 			</div>
 		</div>
 	<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278666213&web_id=1278666213"></script>
