--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="content">
 				<div>
 					<h2><a href="https://www.11tv.fun">永久发布地址1：www.11tv.fun</a></h2>
-					<h2>永久发布地址2：www.18tv.fun</h2>
+					<h2><a href="https://www.18tv.fun">永久发布地址2：www.18tv.fun</a></h2>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
@@ -27,10 +27,8 @@
 					<a href="https://www.av111.top">地址三（点击进入）</a>	
 				</div>
 				<h4><a href="https://www.sanjihuang.com">备用地址1：www.sanjihuang.com</a></h4>
-				<h4>备用地址1：www.sanjihuang.com</h4>
-				<h4>备用地址2：www.liamnb.pw</h4>
-				<h4>备用地址3：www.av111.top</h4>
-				
+				<h4><a href="https://www.liamnb.pw">备用地址2：www.liamnb.pw</a></h4>
+				<h4><a href="https://www.av111.top">备用地址3：www.av111.top</a></h4>				
 			</div>
 		</div>
 	<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278666213&web_id=1278666213"></script>
