--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
 				</div>
 				<div class="golink">
-					<a href="https://www.sanjihuang.com">地址一（点击进入）</a>
-					<a href="https://www.liamnb.pw">地址二（点击进入）</a>
-					<a href="https://www.av111.top">地址三（点击进入）</a>	
+					<a href="https://www.sanjihuang.com">免费在线观看一（点击进入）</a>
+					<a href="https://www.liamnb.pw">免费在线观看二（点击进入）</a>
+					<a href="https://www.av111.top">免费在线观看三（点击进入）</a>	
 				</div>
-				<h4><a href="https://www.sanjihuang.com">备用地址1：www.sanjihuang.com</a></h4>
-				<h4><a href="https://www.liamnb.pw">备用地址2：www.liamnb.pw</a></h4>
-				<h4><a href="https://www.av111.top">备用地址3：www.av111.top</a></h4>				
+				<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
+					<h4>警告！- 禁止18岁以下未成年人访问</h4>
+					<h4>以上网址目前均可在中国大陆地区访问，如遇打不开，请耐心等待5-8秒或刷新页面</h4>
+					<h4>如遇网址被屏蔽，请：①更换其他地址，②发邮件联系站长索要最新地址，③使用vpn访问</h4>
+					<h4 style="margin-top:10px">a18tvfun@outlook.com</h4>
 			</div>
 		</div>
 	<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278666213&web_id=1278666213"></script>
