--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 				</div>
 				<div class="golink">
-					<a href="https://www.sanjihuang.com">免费在线观看一（点击进入）</a>
-					<a href="https://www.liamnb.pw">免费在线观看二（点击进入）</a>
-					<a href="https://www.av111.top">免费在线观看三（点击进入）</a>	
+					<a href="https://www.sanjihuang.com">免费在线观看一(点击进入)</a>
+					<a href="https://www.liamnb.pw">免费在线观看二(点击进入)</a>
+					<a href="https://www.av111.top">免费在线观看三(点击进入)</a>	
 				</div>
 				<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
