--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Cache-Control " content="no-cache,must-revalidate">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-		<title>www.11tv.fun</title>
+		<title>永久发布页</title>
 		<meta name="description" content="全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。" />
 		<meta name="keywords" content="成人网站,在线视频,日韩av" />
 		<link rel="stylesheet" href="./css/comm.css">
@@ -15,8 +15,7 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h2><a href="https://www.11tv.fun">永久发布地址1：www.11tv.fun</a></h2>
-					<h2><a href="https://www.18tv.fun">永久发布地址2：www.18tv.fun</a></h2>
+					<h2><a href="https://18tv.github.io">永久发布地址1：18tv.github.io</a></h2>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 				</div>
