--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h2><a href="https://18tv.github.io">永久发布地址1：18tv.github.io</a></h2>
+					<h2><a href="https://18tv.github.io">永久发布地址：18tv.github.io</a></h2>
+					<h4>永久发布地址，请按"CTRL+D"键收藏本页面，以免迷路</h4>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 				</div>
 				<div class="golink">
-					<a href="https://www.sanjihuang.com">免费在线观看一(点击进入)</a>
-					<a href="https://www.liamnb.pw">免费在线观看二(点击进入)</a>
-					<a href="https://www.av111.top">免费在线观看三(点击进入)</a>	
+					<a href="https://www.sanjihuang.com" target="_blank">免费在线观看一(点击进入)</a>
+					<a href="https://www.liamnb.pw" target="_blank">免费在线观看二(点击进入)</a>
+					<a href="https://www.av111.top" target="_blank">免费在线观看三(点击进入)</a>	
 				</div>
 				<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 					<h4>警告！- 禁止18岁以下未成年人访问</h4>
