--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<div class="container">
 			<div class="content">
 				<div>
-					<h2><a href="https://18tv.github.io">永久发布地址：18tv.github.io</a></h2>
-					<h4>永久发布地址，请按"CTRL+D"键收藏本页面，以免迷路</h4>
+					<h2>永久发布地址：18tv.github.io</h2>
 					<h4>全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。</h4>
 					<div style="height: 2px; background: white; margin-bottom: 10px;"></div>
 				</div>
