--- a/index.html
+++ b/index.html
@@ -7,9 +7,85 @@
 		<title>永久发布页</title>
 		<meta name="description" content="全网最大的免费成人在线视频，每日更新，应用尽有，车友们务必记得收藏本页。" />
 		<meta name="keywords" content="成人网站,在线视频,日韩av" />
-		<link rel="stylesheet" href="./css/comm.css">
-		<script type='text/javascript' src='./javascript/jquery.min.js'></script>
-		<script type="text/javascript" src="./javascript/jquery.qrcode.min.js"></script>
+		<style type="text/css">
+			html,body,div,h1,h2,h3,h4,h5,h6,p,span,img,input {margin: 0;padding: 0;}
+			body {font-size: 100% ;font-family: 'Verdana', 'Arial';color: rgba(223, 11, 11, 0.8);font: normal 100% Helvetica, Arial, sans-serif;}
+			.container {
+				width: 100%;
+				height: 100%;
+				position: relative;
+				background-color: #df805a;
+				background-image: url(../image/beijing.jp);
+				background-position: center top;
+				background-size: cover;}
+			.content {
+				width: 75%;
+				height: 75%;
+				position: absolute;
+				top: 15%;
+				left: 12%;
+				border-radius: 8px;
+				box-shadow: 0 10px 20px rgba(5, 5, 5, 0.5);
+				overflow: hidden;
+				z-index: 2;
+				padding: 20px;
+				box-sizing: border-box;}
+			.content h2 {
+				font-size: 1.2em;
+				text-align: center;
+				margin-bottom: 10px;
+				color: white;}
+			.content h3 {
+				font-size: 1em;
+				text-align: center;
+				margin-bottom: 10px;
+				color: white;}
+			.content h4 {
+				font-size: 0.8em;
+				text-align: center;
+				margin-bottom: 10px;
+				color: white;}
+			.content h5 {
+				font-size: 0.6em;
+				text-align: center;
+				margin-bottom: 10px;
+				color: white;}
+			.content h6 {
+				font-size: 0.6em;
+				text-align: center;
+				margin-bottom: 10px;
+				color: white;}
+			.content p {
+				font-size: 1.0em;
+				text-indent: 0.4em;
+				line-height: 1.7;
+				color: white;
+				text-align: center;}
+			.golink a {
+				display: block;
+				width: 200px;
+				height: 40px;
+				text-align: center;
+				border-radius: 3px;
+				border: 2px rgba(255, 255, 255, .5) solid;
+				font-size: 16px;
+				line-height: 40px;
+				margin: 10px auto;
+				transition: all .5s;
+				filter: progid:DXImageTransform.Microsoft.Shadow(color=#313131, direction=120, strength=4);
+				-moz-box-shadow: 2px 2px 10px #313131;
+				-webkit-box-shadow: 2px 2px 10px #313131;
+				box-shadow: -2px 0px 10px -2px #313131;
+				background: -webkit-gradient(linear, 0 0, 0 100%, from(#990253), to(#7d0044));
+				background: -webkit-linear-gradient(top, #990253, #7d0044);
+				background: -moz-linear-gradient(top, #990253, #7d0044);
+				background: -o-linear-gradient(top, #990253, #7d0044);
+				background: -ms-linear-gradient(top, #990253, #7d0044);
+				background: linear-gradient(top, #990253, #7d0044);
+				filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#990253, endColorstr=#7d0044);}
+			a:link,
+			a:visited {color: #fff;text-decoration: none;}
+		</style>
 	</head>
 	<body>
 		<div class="container">
