--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				width: 100%;
 				height: 100%;
 				position: relative;
-				background-color: #555555;
+				background-color: gray;
 				background-image: url(../image/beijing.jp);
 				background-position: center top;
 				background-size: cover;}
