--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				height: 100%;
 				position: relative;
 				background-color: gray;
-				background-image: url(../image/beijing.jp);
+				background-image: url(./);
 				background-position: center top;
 				background-size: cover;}
 			.content {
